--- a/tongol-albert-full_responsive_multi_page_website_design/index.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <section class="header">
 
         <nav>
@@ -46,19 +45,121 @@
         </div>
 
     </section>
+<!-----------------Course------------------>
+
+<section class="course">
+    <h1>Academic Programs</h1>
+    <p>HAU offers various academic programs from basic education, undergraduate, to postgraduate levels. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities. </p>
+    <div class="row">
+        <div class="course-col">
+            <h3>Basic Education</h3>
+            <p>The Laboratory Elementary School was established in 1960 primarily as a training ground for the students of the College of Education. A Grade One class was initially opened with the children of the workers of the founder, Don Juan D. Nepomuceno, as the pupils who all studied free of charge.</p>
+        </div>
+        <div class="course-col">
+            <h3>College</h3>
+            <p>HAU offers cutting-edge academic programs for the undergraduate level. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities.</p>
+        </div>
+        <div class="course-col">
+            <h3>Graduate School</h3>
+            <p>The Graduate School envisions itself to be one of the centers of excellence in graduate education and research in the Asia Pacific Region that will produce graduates who are role model catalysts for countryside development in the fields of Arts and Sciences, Business, Education, Information Technology, Engineering and Nursing education.</p>
+        </div>
+    </div>
+</section>
+
+<!-----------------Campus----------------->
+
+<section class="campus">
+    <h1>Our Angelite Campus</h1>
+
+    <div class="row">
+        <div class="campus-col">
+            <img src="images/ggn.png">
+            <div class="layer">
+                <h3>Geromin G. Nepomuceno Building</h3>
+            </div>
+        </div>
+        <div class="campus-col">
+            <img src="images/sjh.jpg">
+            <div class="layer">
+                <h3>Saint Joseph Hall</h3>
+            </div>
+        </div>
+        <div class="campus-col">
+            <img src="images/sfj.jpg">
+            <div class="layer">
+                <h3>San Francisco Javier Building</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-------------------Facilities---------------->
+
+<section class="facilities">
+    <h1>Our Facilities</h1>
+    
+    <div class="row">
+        <div class="facilities-col">
+            <img src="images/library.png">
+                <h3>Study Areas</h3>
+                <p>The Library has open reading areas in the 2nd and 3rd floors of the library for reading and serious study. They are available on a first come-first serve basis.</p>
+        </div>
+        <div class="facilities-col">
+            <img src="images/discussion.jpg">
+                <h3>Discussion Rooms</h3>
+                <p>Discussion rooms are available for currently enrolled students. Inquiries for the use of these rooms should be made at the Office of the Chief Librarian (2nd Floor).</p>
+        </div>
+        <div class="facilities-col">
+            <img src="images/faculty.jpg">
+                <h3>Faculty Room</h3>
+                <p>Located at the 2nd floor of the library and is provided with two (2) computer units w/ internet connections. It can accommodate 12-15 faculty at one time.</p>
+        </div>
+    </div>
+</section>
+
+<!-----------------testimonials------------------>
+
+    <section class="testimonials">
+        <h1>What Our Formal Students Says</h1>
+    <div class="row">
+        <div class="testimonials-col">
+            <img src="images/user1.jpg">
+            <div>
+                <p>Holy Angel University is, if not the best, one of the best schools in the region teaching accountancy. The atmosphere is highly suitable to learning. Professors (specifically) in the Accountancy Department also practice their profession and share real-life situations which makes every class interesting. The University continuously improves it's facilities to better serve it's students.</p>
+                <h3>Nicole Mercado</h3>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-half-o"></i>
+            </div>
+        </div>
+        <div class="testimonials-col">
+            <img src="images/user2.jpg">
+            <div>
+                <p>I have chosen this particular school because of it's quality education. The University prepares it's students in every aspect of their lives, giving them the best ambiance and education possible. It also gives it's students a sense of comfort, no one will ever feel out of place.</p>
+                <h3>Patrick Santos</h3>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+        </div>
+    </div>
+    </section>
+
+<!----------------Javascript for Toggle Menu--------------->
 
     <script>
-
         var navLinks=document.getElementById("navLinks");
         
         function showMenu(){
-            navLinks.style.right="0";
+            navLinks.style.right = "0";
         }
         function hideMenu(){
-            navLinks.style.right="-200px";
+            navLinks.style.right = "-200px";
         }
     </script>
-
 </body>
-
 </html>
