--- a/bondoc-do-automotivePartsEcommerceSite/index.html
+++ b/bondoc-do-automotivePartsEcommerceSite/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DBFAB | Autoparts & Fabrication | Home</title>
+    <title>DB MFG | Autoparts & Fabrication | Home</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
   </head>
   <nav class="navbar navbar-expand-lg bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#" style="color:whitesmoke"><img src="images/logo.png" alt="dB-AutoFabrication"></a>
+      <a class="navbar-brand" href="#" style="color:whitesmoke"><img src="images/logo.png" alt="dB-Manufacturing"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,7 +41,7 @@
       </div>
     </div>
   </nav>
-
+<div>
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -51,13 +51,13 @@
   
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="/bondoc-do-automotivePartsEcommerceSite/images/placeholder-image.png" class="d-block w-100" alt="img1">
+        <img src="/bondoc-do-automotivePartsEcommerceSite/images/home-carousel-image-1.png" class="d-block w-100" alt="img1">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="/bondoc-do-automotivePartsEcommerceSite/images/placeholder-image.png" class="d-block w-100" alt="img2">
+        <img src="/bondoc-do-automotivePartsEcommerceSite/images/home-carousel-image-2.png" class="d-block w-100" alt="img2">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="/bondoc-do-automotivePartsEcommerceSite/images/placeholder-image.png" class="d-block w-100" alt="img3">
+        <img src="/bondoc-do-automotivePartsEcommerceSite/images/home-carousel-image-3.png" class="d-block w-100" alt="img3">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -68,20 +68,18 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-
+  </div>
+<hr>
     <div class="container">
     <h1>Who are we?</h1>
-    <p>We are a small group of automotive enthusiasts who provide our services to enhance your car or motorcycle experience. <br> We offer custom parts fabrication and can procure OEM spec parts for many makes and models of vehicle. </p>
+    <p>We are a small group of automotive enthusiasts who provide our services to enhance your car or motorcycle experience. <br> We offer custom parts fabrication and can procure OEM spec parts for many makes and models of vehicle. <br>
+    If you've an idea we'll make it real. </p>
     <p></p>
     </div>
- <div class="card-auto" style="width: 18rem;">
-  <img src="/bondoc-do-automotivePartsEcommerceSite/images/placeholder-image.png" class="card-img-top" alt="card image here">
-  <div class="card-body">
-    <h5 class="card-title">Read more about us</h5>
-    <p class="card-text">Learn about our story. How we started, what we do and where we are today. Learn about how our services help people have a better vehicle ownership experience</p>
-    <a href="#" class="btn btn-primary">Read Article</a>
-  </div>
+ <div class="container">
+  
 </div>
+
 <!--Bootstrap js link-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
