--- a/malonzo-lm-FoodBlog/index.html
+++ b/malonzo-lm-FoodBlog/index.html
@@ -15,9 +15,9 @@
             <div class="container">
                 <a href="index.html" class="navbar-brand">good food, good mood.</a>
                 <div class="navbar-nav">
-                    <a href="">Home</a>
-                    <a href="">Food</a>
-                    <a href="">About</a>
+                    <a href="index.html">Home</a>
+                    <a href="food.html">Food</a>
+                    <a href="about.html">About</a>
                 </div>
             </div>
        </nav>
@@ -27,16 +27,85 @@
                     <span>Foodies are welcome here!</span>
                 </h1>
                 <p>Nothing brings people together like Good Food!</p>
-                <form>
-                    <input type="text" class="search-input" placeholder="Search your cravings. . .">
-                    <button type="submit" class="search-btn">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </form>
             </div>
         </div> 
         <!-- end of header -->
-
+        <div class = "food-content">
+            <!-- item -->
+            <div class = "food-item">
+              <div class = "food-img">
+                <img src = "images/filipino-cuisine.jpg" alt = "">
+              </div>
+              <div class = "food-text">
+                <h2>Filipino Cuisine</h2>
+                <p>The Filipino foods we eat today are a direct fusion of indigenous ingredients, flavours, and outside influence. With such a wide geography and rich indigenous history, each area of the Philippines reflects these influences in local variations of popular dishes.</p>
+                <a href = "food.html">Read More</a>
+              </div>
+            </div>
+        </div>
+        <div class = "food-content">
+            <!-- item -->
+            <div class = "food-item">
+              <div class = "food-img">
+                <img src = "images/chinese-cuisine.jpg" alt = "">
+              </div>
+              <div class = "food-text">
+                <h2>Chinese Cuisine</h2>
+                <p>Chinese food, rich and colorful, has diversified color, aromatic flavor, and excellent taste as its main features. With these three characteristics, it is not only tasty but also a work of art for people to appreciate.</p>
+                <a href = "food.html">Read More</a>
+              </div>
+            </div>
+        </div>
+        <div class = "food-content">
+            <!-- item -->
+            <div class = "food-item">
+              <div class = "food-img">
+                <img src = "images/japanese-cuisine.jpg" alt = "">
+              </div>
+              <div class = "food-text">
+                <h2>Japanese Cuisine</h2>
+                <p>Japanese cuisine is known for its beauty and delightful subtle flavors. Traditional Japanese fare always manages to look like a work of art, since it is based on washoku. Apart from that, it's incredibly healthy as well, which is deemed the reason why Japanese people live a long life.</p>
+                <a href = "food.html">Read More</a>
+              </div>
+            </div>
+        </div>
+        <div class = "food-content">
+            <!-- item -->
+            <div class = "food-item">
+              <div class = "food-img">
+                <img src = "images/korean-cuisine.jpg" alt = "">
+              </div>
+              <div class = "food-text">
+                <h2>Korean Cuisine</h2>
+                <p>Korean food tends to be intensely flavoured, spicy and pungent. Traditional restaurants often feature charcoal grills in the middle of the table - a type of indoor barbecue.</p>
+                <a href = "food.html">Read More</a>
+              </div>
+            </div>
+        </div>
+        <div class = "food-content">
+            <!-- item -->
+            <div class = "food-item">
+              <div class = "food-img">
+                <img src = "images/thai-cuisine.jpg" alt = "">
+              </div>
+              <div class = "food-text">
+                <h2>Thai Cuisine</h2>
+                <p>Think of Thai food as an exotic version of Chinese food. It has many similar elements, but some have more extreme flavors such as ultra-sweet, salty or that ultra-spiciness, like Indian foods.</p>
+                <a href = "food.html">Read More</a>
+              </div>
+            </div>
+        </div>
+        <!-- footer -->
+        <footer>
+            <div class = "social-links">
+                <a href = "#"><i class = "fab fa-facebook-f"></i></a>
+                <a href = "#"><i class = "fab fa-twitter"></i></a>
+                <a href = "#"><i class = "fab fa-instagram"></i></a>
+                <a href = "#"><i class = "fab fa-pinterest"></i></a>
+            </div>
+            <span>Food is Life Blog Page</span>
+        </footer>
+        <!-- end of footer -->
    
     </body>
 </html>
