--- a/tongol-albert-full_responsive_multi_page_website_design/about.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/about.html
@@ -4,7 +4,7 @@
 
     <meta name="viewport" content="wit=device-width, initial-scale=1.0">
 
-    <title>University Website Design - Easy Tutorials</title>
+    <title>University Website Design</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -48,13 +48,13 @@
             <h1>History</h1>
         <div class="about-col">
             <div class="left">
-                <img src="images/about1.jpg">
+                <img src="images/history1.jpg">
             </div> 
         </div>
     </div>
     <div class="about-col">
         <p>In June 1933, Holy Angel Academy (HAA) opened its doors to a modest group of 78 high school students in the Holy Rosary Parish Convent. It was initiated through the joint efforts of the late Don Juan D. Nepomuceno, a known philanthropist/prominent businessman and Fr. Pedro P. Santos, then parish priest of the town of Angeles and later Archbishop of Nueva Caceres. Its primary purpose was to offer Catholic education in the secondary level, which was the felt need of the community at that...
-        <a href="" class="red-btn">Continue Reading</a></p>
+        <a href="history.html" class="red-btn">Continue Reading</a></p>
     </div>
 </section>
 
