--- a/tongol-albert-full_responsive_multi_page_website_design/course.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/course.html
@@ -4,7 +4,7 @@
 
     <meta name="viewport" content="wit=device-width, initial-scale=1.0">
 
-    <title>University Website Design - Easy Tutorials</title>
+    <title>University Website Design</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
