--- a/tongol-albert-full_responsive_multi_page_website_design/index.html
+++ b/tongol-albert-full_responsive_multi_page_website_design/index.html
@@ -4,7 +4,7 @@
 
     <meta name="viewport" content="wit=device-width, initial-scale=1.0">
 
-    <title>University Website Design - Easy Tutorials</title>
+    <title>University Website Design</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -41,7 +41,7 @@
         <div class="text-box">
             <h1>The First Lay-founded and <br>Co-educational Catholic School</h1>
             <p>Private research non-profit coeducational Basic and <br>Higher education institution</p>
-            <a href="" class="hero-btn"> Visit Us To Know More</a>
+            <a href="https://www.hau.edu.ph/" target="_blank" class="hero-btn"> Visit Us To Know More</a>
         </div>
 
     </section>
