--- a/bamba-jk/RacingGame_Beta/index.html
+++ b/bamba-jk/RacingGame_Beta/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html><head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
         <!--<script src="jquery.js"></script>-->
         <script src="racer.js"></script>
