--- a/bondoc-do-automotivePartsEcommerceSite/index.html
+++ b/bondoc-do-automotivePartsEcommerceSite/index.html
@@ -26,25 +26,25 @@
       <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"></path>
     </symbol>
   </svg>
-  <nav class="navbar navbar-expand-lg bg-primary">
+  <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#" style="color:whitesmoke"><img src="images/logo.png" alt="dB-Manufacturing"></a>
+      <a class="navbar-brand" href="#" ><img src="images/logo.png" style="max-width: 15%; max-height: auto;" alt="dB-Manufacturing"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto" >
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="color:whitesmoke">Home</a>
+            <a class="nav-link active" aria-current="page" href="#" >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color:whitesmoke">Available Parts</a>
+            <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html" >Available Parts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color:whitesmoke">Contact Us</a>
+            <a class="nav-link" href="#" >Contact Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:whitesmoke">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" >
               Custom Orders
             </a>
             <ul class="dropdown-menu">
@@ -108,8 +108,8 @@
 
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Available Parts</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact Us</a></li>
+      <li class="nav-item"><a href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html" class="nav-link px-2 text-muted">Available Parts</a></li>
+      <li class="nav-item"><a href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html" class="nav-link px-2 text-muted">Contact Us</a></li>
   
     </ul>
   </footer>
