--- a/bondoc-jd-inventory/InventorySystem/alertPage/registerAlert.html
+++ b/bondoc-jd-inventory/InventorySystem/alertPage/registerAlert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/InventorySystem/css/alert.css">
+    <link rel="stylesheet" type="text/css" href="/css/alert.css">
     <title>Registered-Inventory System</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
                         <h1>User Created!</h1>
                     </div>
                     <div class="loginInputContainer">
-                        <h2><a href="/InventorySystem/forms/loginPage.php">Proceed</a> </h2>
+                        <h2><a href="/forms/logout.php">Proceed</a> </h2>
                     </div> 
                 </form>
         </div>
