--- a/ComputerWebsite/index.html
+++ b/ComputerWebsite/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Parts Store</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="header">
     <div class="container">
         <div class="navbar">
             <div class="logo">
@@ -22,16 +24,38 @@
                     <li><a href="">Account</a></li>
                 </ul>
             </nav>
+            <img src="ComputerParts/basket-cart.png" width="30px" height="30px">
         </div>
         <div class="row">
             <div class="col-2">
-                <h1>Computer Parts Available!</h1>
-                <p>New and Affordable PC Parts.</p>
+                <h1>PC Parts Available</h1>
+                <p>New and powerful computer system parts ready for superb gaming experience.</p>
+                <a href="" class="btn">Explore Now &#8594;</a>
             </div>
             <div class="col-2">
-                <img src="ComputerParts/Build-PC-Gaming.jpg" alt="">
+                <img src="ComputerParts/EVGA_Nvidia_GeForce_RTX_3090_deal_sale_GPU.jpg" alt="">
             </div>
         </div>
     </div>
+    </div>
+
+    <!------------categories-------------------->
+
+ <div class="Pc Parts">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-3">
+             <img src="ComputerParts/CorsairRam.jpeg">
+            </div>
+            <div class="col-3">
+             <img src="ComputerParts/DeepcoolPowerSupply.png">
+            </div>
+            <div class="col-3">
+             <img src="ComputerParts/i9-11thgen.jpeg">
+            </div>
+         </div>
+    </div>
+ </div>
+
 </body>
 </html>
